--- a/example/main.tex
+++ b/example/main.tex
@@ -3,6 +3,7 @@
 \usepackage{graphicx}
 \usepackage{lipsum}  % to generate random paragraphs
 \usepackage[none]{hyphenat}  % disable hyphenation; not required by GW guideline
+\usepackage[style=numeric-comp]{biblatex}  % a modern alternative to bibtex
 \sloppy  % to make long but non-hyphenated words go to the next line
 
 % configuration for front pages (commands came from gw-dissertation class)
@@ -14,11 +15,11 @@
 \graddate{31}
 \advisor{James W. Smith}{Professor of Finance}
 \school{School of Engineering and Applied Science}
-\dedication{\lipsum[2-3]}
-\acknowledgments{\lipsum[2-3]}
-\disclaimer{\lipsum[2-3]}
-\abstract{\lipsum[2-3]}
-\preface{\lipsum[2-3]}
+\dedication{\lipsum[4-5]}
+\acknowledgments{\lipsum[4-5]}
+\disclaimer{\lipsum[4-5]}
+\abstract{\lipsum[4-5]}
+\preface{\lipsum[4-5]}
 \prevdegree{B.A. in Accounting, May 2006, University of Maryland}
 \prevdegree{M.S. in Finance, January 2008, University of Maryland}
 \committee{James W. Smith, Professor of Engineering, Dissertation Director}
@@ -42,9 +43,12 @@ ruler bar except for the first line of text of each new paragraph.
 
 Note that each level is indented in a $1/4$ inch (or two dots to the right on the ruler bar) from
 the last section header. 
+    
+    \section*{A dummy section header}
+    This is a section without numbering. It is not going to present in ToC.
 
     \section{Second Level Header}
-    \lipsum[3]
+    \lipsum[6]
 
     \section{Second Level Header}
     \lipsum[4]
@@ -62,11 +66,12 @@ the last section header.
 
 Start your text and double-space the text.
 \begin{figure}[h!]
-    \Centering
+    \centering
     \includegraphics[width=0.5\linewidth]{grid.jpg}
     \caption{Staggered grid (public domain figure)}
 \end{figure}
 \begin{figure}[h!]
+    \centering
     \includegraphics{laminar_turbulent_transition.jpg}
     \caption{%
         Laminar turbulent transition (public domain figure). I am trying to make the caption %
@@ -79,7 +84,7 @@ Start your text and double-space the text.
 
 Start your text and double-space the text.
 \begin{figure}[h!]
-    \Centering
+    \centering
     \includegraphics[width=0.5\linewidth]{the_great_wave.jpg}
     \caption{The Great Wave off Kanagawa by Katsushika Hokusai (public domain figure)}
 \end{figure}
@@ -88,7 +93,7 @@ Start your text and double-space the text.
 
 Start your text and double-space the text.
 \begin{table}[h!]
-    \Centering
+    \centering
     \begin{tabular}{||c c c c||}
          \hline
          Col1 & Col2 & Col2 & Col3 \\ [0.5ex]
@@ -108,7 +113,7 @@ Start your text and double-space the text.
 Start your text and double-space the text. This is a fake citation \cite{author1_1990}. This is
 another fake citation \cite{author2_2000}.
 \begin{table}[h!]
-    \Centering
+    \centering
     \begin{tabular}{||c c c c||}
          \hline
          Col1 & Col2 & Col2 & Col3 \\ [0.5ex]
@@ -124,7 +129,7 @@ another fake citation \cite{author2_2000}.
 \end{table}
 
 \sloppy
-\printbibliography
+\printbibliography[heading=bibintoc, title=References]
 \fussy
 
 \appendix
@@ -133,21 +138,22 @@ another fake citation \cite{author2_2000}.
     \section{
         A very long section title is supposed to be rendered in single-line spacing within the entry
     }
-    Start your text here and double- space the text.
+    \lipsum[2]
     \begin{figure}[h!]
-        \Centering
+        \centering
         \includegraphics[width=0.5\linewidth]{magnetic_turbulence.jpg}
         \caption{Magnetic turbulence (public domain figure)}
     \end{figure}
+    \lipsum[4]
 
         \subsection{Appendix Can Have Subsections}
-        Start your text here and double- space the text.
+        \lipsum[3]
         \begin{figure}[h!]
-            \Centering
+            \centering
             \includegraphics[width=0.5\linewidth]{mt_otkliknoy_greben.jpg}
             \caption{Mt. Otkliknoy Greben (public domain figure)}
         \end{figure}
-
+        \lipsum[5]
         \nomenclature{$c$}{Speed of light in a vacuum}
         \nomenclature{$\alpha$}{
             A very long definition.  A very long definition.  A very long definition.
@@ -159,12 +165,19 @@ another fake citation \cite{author2_2000}.
         \nomenclature{$h$}{Planck constant}
 
     \section{Appendix Can Have Sections}
-    Start your text here and double- space the text.
+    \lipsum[6]
 
-\chapter{The Heading of Appendix B}
-Start your text here and double- space the text.
+\chapter{
+    The Heading of Appendix B
+    The Heading of Appendix B
+    The Heading of Appendix B
+    The Heading of Appendix B
+    The Heading of Appendix B
+    The Heading of Appendix B
+}
+\lipsum[7]
 \begin{table}[h!]
-    \Centering
+    \centering
     \begin{tabular}{||c c c c||}
          \hline
          Col1 & Col2 & Col2 & Col3 \\ [0.5ex]
@@ -178,5 +191,6 @@ Start your text here and double- space the text.
     \end{tabular}
     \caption{Example table 3}
 \end{table}
+\lipsum[1]
 
 \end{document}
